--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
   </head>
 <div class="parte-um">
 <h1> <p class="ini"> Super Grupo GE </p class="ini"></h1>
-	
+	<nav> 
+		<ol>
+			<li><a href="file:///C:/Users/User-Pc/Desktop/Luzes/contatos.html">Contatos</a></li>
+			<li><a href="file:///C:/Users/User-Pc/Desktop/Luzes/interessante.html">  interessantes</a></li>
+			<li><a href="file:///C:/Users/User-Pc/Desktop/Luzes/melhor.html"> O melhor</a></li>
+		</ol>
+	</nav>
 <h2> Terça às 17 h e 20 min </h2>
 <h1> Nosso Grupo </h1><ul> 
-	<li> Miderson</li>
+	<li><a href="https://github.dev/Miderson/pagina"></a> Miderson</li>
+
 	<li> Edmilson</li>
 	<li> Rosilene</li>
 	<li> Liziane </li>
